Update OneConnect configuration URL and details

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Open OneConnect</title>
-  <meta http-equiv="refresh" content="0; url=oneconnect://configuration?desc=RashaVPN%202-110&server=one2.btaks.com&port=110">
+  <meta http-equiv="refresh" content="0; url=oneconnect://configuration?desc=RashaVPN%20New-510&server=nl10.cdntak.com&port=510">
 </head>
 <body>
   <p>در حال انتقال به OneConnect...</p>
-  <a href="oneconnect://configuration?desc=RashaVPN%202-110&server=one2.btaks.com&port=110">
+  <a href="oneconnect://configuration?desc=RashaVPN%20new-510&server=nl10.cdntak.com&port=510">
     اگر به‌طور خودکار باز نشد، اینجا کلیک کنید
   </a>
 </body>
 </html>
+
 
