--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Open OneConnect</title>
-  <meta http-equiv="refresh" content="0; url=oneconnect://configuration?desc=RashaVPN%20New-510&server=nl10.cdntak.com&port=510">
+  <meta http-equiv="refresh" content="0; url=oneconnect://configuration?desc=Rashaone2%20New-110&server=one2.cdntak.com&port=110">
 </head>
 <body>
   <p>در حال انتقال به OneConnect...</p>
-  <a href="oneconnect://configuration?desc=RashaVPN%20new-510&server=nl10.cdntak.com&port=510">
+  <a href="oneconnect://configuration?desc=Rashaone2%20New-110&server=one2.cdntak.com&port=110">
     اگر به‌طور خودکار باز نشد، اینجا کلیک کنید
   </a>
 </body>
 </html>
+
 
 
